--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AAD</string>
+    <string name="gorira">tarou</string>
+    <string name="kani">takaasigani</string>
 </resources>
